--- a/SimpleFront/Dockerfile
+++ b/SimpleFront/Dockerfile
@@ -10,7 +10,7 @@ COPY SimpleFront/ ./
 
 RUN npm run build
 
-FROM nginx:alpine
+FROM nginx:1.25.3-alpine
 
 COPY --from=build /app/dist/simple-front/ /usr/share/nginx/html
 
