Added express and typescript to simple back

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
             dockerfile: SimpleBack/Dockerfile
         ports:
             - 3000:3000
+        environment:
+            - PORT=3000
+            - HOSTNAME=0.0.0.0
 
     simple-listener:
         container_name: simple-listener
