--- a/SimpleBack/package.json
+++ b/SimpleBack/package.json
@@ -5,9 +5,20 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "npx tsc",
+        "start": "node dist/index.js",
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
     },
     "author": "Paweł Kwapień",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "concurrently": "^8.2.2",
+        "express": "^4.18.2",
+        "nodemon": "^3.0.1"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.20",
+        "@types/node": "^20.8.9",
+        "typescript": "^5.2.2"
+    }
 }
-
