--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,17 +15,30 @@ services:
         environment:
             - PORT=3000
             - HOSTNAME=0.0.0.0
+            - MONGODB_URL=mongodb://root:example@mongo:27017/
 
-    simple-listener:
-        container_name: simple-listener
-        build:
-            dockerfile: SimpleListener/Dockerfile
-        ports:
-            - 3001:3001
+    # simple-listener:
+    #     container_name: simple-listener
+    #     build:
+    #         dockerfile: SimpleListener/Dockerfile
+    #     ports:
+    #         - 3001:3001
 
     mongo:
-        container_name: mongo
+        container_name: mongodb
         image: mongo:7.0.2
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: root
+            MONGO_INITDB_ROOT_PASSWORD: example
+
+    mongo-express:
+        container_name: mongo-express
+        image: mongo-express
+        restart: always
+        ports:
+            - 8081:8081
+        environment:
+            ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
 
     redis:
         container_name: redis
