--- a/SimpleBack/package.json
+++ b/SimpleBack/package.json
@@ -12,6 +12,7 @@
     "author": "Paweł Kwapień",
     "license": "ISC",
     "dependencies": {
+        "bull": "^4.11.4",
         "concurrently": "^8.2.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
