--- a/SimpleBack/package.json
+++ b/SimpleBack/package.json
@@ -2,26 +2,27 @@
     "name": "simpleback",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "dist/index.js",
     "type": "module",
     "scripts": {
         "build": "npx tsc",
         "start": "node dist/index.js",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+        "dev": "concurrently \"npx tsc --watch\" \"nodemon -L\""
     },
     "author": "Paweł Kwapień",
     "license": "ISC",
     "dependencies": {
         "bull": "^4.11.4",
-        "concurrently": "^8.2.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "mongoose": "^7.6.3",
-        "nodemon": "^3.0.1"
+        "mongoose": "^7.6.3"
     },
     "devDependencies": {
         "@types/express": "^4.17.20",
         "@types/node": "^20.8.9",
+        "concurrently": "^8.2.2",
+        "nodemon": "^3.0.1",
+        "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     }
 }
