--- a/SimpleBack/package.json
+++ b/SimpleBack/package.json
@@ -12,12 +12,14 @@
     "author": "Paweł Kwapień",
     "license": "ISC",
     "dependencies": {
+        "amqplib": "^0.10.3",
         "bull": "^4.11.4",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.6.3"
     },
     "devDependencies": {
+        "@types/amqplib": "^0.10.4",
         "@types/express": "^4.17.20",
         "@types/node": "^20.8.9",
         "concurrently": "^8.2.2",
