--- a/SimpleListener/package.json
+++ b/SimpleListener/package.json
@@ -8,6 +8,8 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Paweł Kwapień",
-    "license": "ISC"
+    "license": "ISC",
+    "dependencies": {
+        "amqplib": "^0.10.3"
+    }
 }
-
