--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -20,6 +20,8 @@ services:
             - REDIS_PORT=6379
         volumes:
             - ./SimpleBack/src:/app/src
+        depends_on:
+            - rabbitmq
 
     simple-listener:
         container_name: simple-listener
@@ -27,6 +29,8 @@ services:
             dockerfile: SimpleListener/Dockerfile
         ports:
             - 3001:3001
+        depends_on:
+            - rabbitmq
 
     mongo:
         container_name: mongodb
@@ -47,3 +51,7 @@ services:
     redis:
         container_name: redis
         image: redis:7.2.2-alpine
+
+    rabbitmq:
+        container_name: rabbitmq
+        image: rabbitmq:3.12.8-alpine
