--- a/SimpleBack/package.json
+++ b/SimpleBack/package.json
@@ -14,12 +14,14 @@
     "dependencies": {
         "amqplib": "^0.10.3",
         "bull": "^4.11.4",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.6.3"
     },
     "devDependencies": {
         "@types/amqplib": "^0.10.4",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.20",
         "@types/node": "^20.8.9",
         "concurrently": "^8.2.2",
